# ncnn_yolox_flutter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  build.yaml  pubspec.yaml
.github/: dependabot.yaml
.github/workflows/: build_ncnn.yaml  closed_pull_requests.yaml  pull_requests.yaml
.github/workflows/scripts/: build_android.sh  build_ios.sh  build_ncnn.sh  install-flutter.sh
android/: CMakeLists.txt  build.gradle  settings.gradle
android/ncnn-20220216/armeabi-v7a/include/ncnn/: platform.h
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/dev/kingu/ncnn_yolox_flutter/: NcnnYoloxFlutterPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: app_lifecycle_observer.dart  main.dart
example/lib/pages/: my_home_page.dart  my_home_page_drawer.dart  preview_page.dart
example/lib/providers/: my_camera_controller.dart  ncnn_yolox_controller.dart  (+2 more)
example/test/: widget_test.dart
ios/: ncnn_yolox_flutter.podspec
ios/Classes/: NcnnYoloxFlutterPlugin.h  NcnnYoloxFlutterPlugin.m  SwiftNcnnYoloxFlutterPlugin.swift  yolox.cpp
lib/: ncnn_yolox.dart  ncnn_yolox_flutter.dart  yolox_results_painter.dart
lib/models/: detect_results.dart  detect_results.freezed.dart  models.dart  pixel_channel.dart  pixel_format.dart  yolox_results.dart  yolox_results.freezed.dart
notebooks/: ncnn_build.ipynb  yolox_onnx_to_ncnn.ipynb
scripts/: create_tag.sh
test/: ncnn_yolox_flutter_test.dart
(+10 files in other folders)
